Modify text in GUI

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -108,15 +108,15 @@
                                                     <td><input class="regVal formatted_value" id="r9" type="text" name="r9"/></td>
                                                 </tr>
                                                 <tr id="user_r10" class="register_row">
-                                                    <td>R10 (sl)</td>
+                                                    <td>R10</td>
                                                     <td><input class="regVal formatted_value" id="r10" type="text" name="r10"/></td>
                                                 </tr>
                                                 <tr id="user_r11" class="register_row">
-                                                    <td>R11 (fp)</td>
+                                                    <td>R11</td>
                                                     <td><input class="regVal formatted_value" id="r11" type="text" name="r11"/></td>
                                                 </tr>
                                                 <tr id="user_r12" class="register_row">
-                                                    <td>R12 (ip)</td>
+                                                    <td>R12</td>
                                                     <td><input class="regVal formatted_value" id="r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="user_r13" class="register_row">
@@ -183,15 +183,15 @@
                                                     <td><input class="regVal formatted_value" id="FIQ_r9" type="text" name="r9"/></td>
                                                 </tr>
                                                 <tr id="fiq_r10" class="register_row">
-                                                    <td>R10 (sl)</td>
+                                                    <td>R10</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r10" type="text" name="r10"/></td>
                                                 </tr>
                                                 <tr id="fiq_r11" class="register_row">
-                                                    <td>R11 (fp)</td>
+                                                    <td>R11</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r11" type="text" name="r11"/></td>
                                                 </tr>
                                                 <tr id="fiq_r12" class="register_row">
-                                                    <td>R12 (ip)</td>
+                                                    <td>R12</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="fiq_r13" class="register_row">
@@ -258,15 +258,15 @@
                                                     <td><input class="regVal formatted_value" id="IRQ_r9" type="text" name="r9"/></td>
                                                 </tr>
                                                 <tr id="irq_r10" class="register_row">
-                                                    <td>R10 (sl)</td>
+                                                    <td>R10</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r10" type="text" name="r10"/></td>
                                                 </tr>
                                                 <tr id="irq_r11" class="register_row">
-                                                    <td>R11 (fp)</td>
+                                                    <td>R11</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r11" type="text" name="r11"/></td>
                                                 </tr>
                                                 <tr id="irq_r12" class="register_row">
-                                                    <td>R12 (ip)</td>
+                                                    <td>R12</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="irq_r13" class="register_row">
@@ -333,15 +333,15 @@
                                                     <td><input class="regVal formatted_value" id="SVC_r9" type="text" name="r9"/></td>
                                                 </tr>
                                                 <tr id="svc_r10" class="register_row">
-                                                    <td>R10 (sl)</td>
+                                                    <td>R10</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r10" type="text" name="r10"/></td>
                                                 </tr>
                                                 <tr id="svc_r11" class="register_row">
-                                                    <td>R11 (fp)</td>
+                                                    <td>R11</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r11" type="text" name="r11"/></td>
                                                 </tr>
                                                 <tr id="svc_r12" class="register_row">
-                                                    <td>R12 (ip)</td>
+                                                    <td>R12</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="svc_r13" class="register_row">
@@ -421,7 +421,7 @@
                                             <hr/>
                                             Vitesse d'ex&eacute;cution : &nbsp;<input class="config_input" id="animate_speed" type="text" value="100"/>ms<br/>
                                             <hr/>
-                                            <button id="lightmode">Toggle Light Mode</button>
+                                            <button id="lightmode">Modifier l'arrière-plan</button>
                                             <div style="height: 3em;"></div>
                                         </div>
                                     </div>
@@ -462,10 +462,10 @@
                                     <div>
                                         <div style="float: left;">
                                             <input type="file" onchange="loadFileAsText()" id="fileToLoad" style="display: none;"/>
-                                            <label for="fileToLoad" class="flat_button">Charger un fichier</label>
+                                            <label for="fileToLoad" class="flat_button">Restaurer</label>
                                         </div>
                                         <div style="float: right;">
-                                            <button onclick="saveTextAsFile()">T&eacute;l&eacute;charger</button>
+                                            <button onclick="saveTextAsFile()">Sauvegarder</button>
                                         </div>
                                     </div>
                                 </td>
