Added banked register indication

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -120,15 +120,15 @@
                                                     <td><input class="regVal formatted_value" id="r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="user_r13" class="register_row">
-                                                    <td>R13 (sp)</td>
+                                                    <td>R13<span class=smaller_font> (sp)</span></td>
                                                     <td><input class="regVal formatted_value" id="r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="user_r14" class="register_row">
-                                                    <td>R14 (lr)</td>
+                                                    <td>R14<span class=smaller_font> (lr)</span></td>
                                                     <td><input class="regVal formatted_value" id="r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="user_r15" class="register_row">
-                                                    <td>R15 (pc)</td>
+                                                    <td>R15<span class=smaller_font> (pc)</span></td>
                                                     <td><input class="regVal formatted_value" id="r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
@@ -175,35 +175,35 @@
                                                     <td><input class="regVal formatted_value" id="FIQ_r7" type="text" name="r7"/></td>
                                                 </tr>
                                                 <tr id="fiq_r8" class="register_row">
-                                                    <td>R8</td>
+                                                    <td>R8<span class=smaller_font> FIQ</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r8" type="text" name="r8"/></td>
                                                 </tr>
                                                 <tr id="fiq_r9" class="register_row">
-                                                    <td>R9</td>
+                                                    <td>R9<span class=smaller_font> FIQ</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r9" type="text" name="r9"/></td>
                                                 </tr>
                                                 <tr id="fiq_r10" class="register_row">
-                                                    <td>R10</td>
+                                                    <td>R10<span class=smaller_font> FIQ</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r10" type="text" name="r10"/></td>
                                                 </tr>
                                                 <tr id="fiq_r11" class="register_row">
-                                                    <td>R11</td>
+                                                    <td>R11<span class=smaller_font> FIQ</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r11" type="text" name="r11"/></td>
                                                 </tr>
                                                 <tr id="fiq_r12" class="register_row">
-                                                    <td>R12</td>
+                                                    <td>R12<span class=smaller_font> FIQ</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="fiq_r13" class="register_row">
-                                                    <td>R13 (sp)</td>
+                                                    <td>R13<span class=smaller_font> FIQ (sp)</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="fiq_r14" class="register_row">
-                                                    <td>R14 (lr)</td>
+                                                    <td>R14<span class=smaller_font> FIQ (lr)</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="fiq_r15" class="register_row">
-                                                    <td>R15 (pc)</td>
+                                                    <td>R15<span class=smaller_font> (pc)</span></td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
@@ -270,15 +270,15 @@
                                                     <td><input class="regVal formatted_value" id="IRQ_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="irq_r13" class="register_row">
-                                                    <td>R13 (sp)</td>
+                                                    <td>R13<span class=smaller_font> IRQ (sp)</span></td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="irq_r14" class="register_row">
-                                                    <td>R14 (lr)</td>
+                                                    <td>R14<span class=smaller_font> IRQ (lr)</span></td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="irq_r15" class="register_row">
-                                                    <td>R15 (pc)</td>
+                                                    <td>R15<span class=smaller_font> (pc)</span></td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
@@ -345,15 +345,15 @@
                                                     <td><input class="regVal formatted_value" id="SVC_r12" type="text" name="r12"/></td>
                                                 </tr>
                                                 <tr id="svc_r13" class="register_row">
-                                                    <td>R13 (sp)</td>
+                                                    <td>R13<span class=smaller_font> SVC (sp)</span></td>
                                                     <td><input class="regVal formatted_value" id="SVC_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="svc_r14" class="register_row">
-                                                    <td>R14 (lr)</td>
+                                                    <td>R14<span class=smaller_font> SVC (lr)</span></td>
                                                     <td><input class="regVal formatted_value" id="SVC_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="svc_r15" class="register_row">
-                                                    <td>R15 (pc)</td>
+                                                    <td>R15<span class=smaller_font> (pc)</span></td>
                                                     <td><input class="regVal formatted_value" id="SVC_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
