--- a/interface/index.html
+++ b/interface/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-CA">
+<html lang="{{_('langCode')}}">
     <head>
         <meta charset="UTF-8">
         <title>GIF-1001 -- OSA</title>
