Fix issue #6 (misleading label for carry flag)

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -384,7 +384,7 @@
                                                     <td><button class="flag_btn" name="sz"><input class="statusVal pointer" id="sz" type="text" name="sz" readonly/></button></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Emprunt (C)</td>
+                                                    <td>Retenue (C)</td>
                                                     <td><button class="flag_btn" name="c"><input class="statusVal pointer" id="c" type="text" name="c" readonly/></button></td>
                                                     <td><button class="flag_btn" name="sc"><input class="statusVal pointer" id="sc" type="text" name="sc" readonly/></button></td>
                                                 </tr>
