Multiples fixes to merge simulatorV2.
Fix step time in execution mode
Fix parsing PC, SP and LD registers value
Fix instruction description when stepping back
Fix stepping back with branchOP

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -133,15 +133,15 @@
                                                 </tr>
                                                 <tr id="user_r13" class="register_row">
                                                     <td>R13<span class=smaller_font> (sp)</span></td>
-                                                    <td><input class="regVal formatted_value" id="sp" type="text" name="r13"/></td>
+                                                    <td><input class="regVal formatted_value" id="r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="user_r14" class="register_row">
                                                     <td>R14<span class=smaller_font> (lr)</span></td>
-                                                    <td><input class="regVal formatted_value" id="lr" type="text" name="r14"/></td>
+                                                    <td><input class="regVal formatted_value" id="r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="user_r15" class="register_row">
                                                     <td>R15<span class=smaller_font> (pc)</span></td>
-                                                    <td><input class="regVal formatted_value" id="pc" type="text" name="r15"/></td>
+                                                    <td><input class="regVal formatted_value" id="r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
                                         </div>
@@ -208,15 +208,15 @@
                                                 </tr>
                                                 <tr id="fiq_r13" class="register_row">
                                                     <td>R13<span class=smaller_font> FIQ (sp)</span></td>
-                                                    <td><input class="regVal formatted_value" id="FIQ_sp" type="text" name="r13"/></td>
+                                                    <td><input class="regVal formatted_value" id="FIQ_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="fiq_r14" class="register_row">
                                                     <td>R14<span class=smaller_font> FIQ (lr)</span></td>
-                                                    <td><input class="regVal formatted_value" id="FIQ_lr" type="text" name="r14"/></td>
+                                                    <td><input class="regVal formatted_value" id="FIQ_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="fiq_r15" class="register_row">
                                                     <td>R15<span class=smaller_font> (pc)</span></td>
-                                                    <td><input class="regVal formatted_value" id="FIQ_pc" type="text" name="r15"/></td>
+                                                    <td><input class="regVal formatted_value" id="FIQ_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
                                         </div>
@@ -283,15 +283,15 @@
                                                 </tr>
                                                 <tr id="irq_r13" class="register_row">
                                                     <td>R13<span class=smaller_font> IRQ (sp)</span></td>
-                                                    <td><input class="regVal formatted_value" id="IRQ_sp" type="text" name="r13"/></td>
+                                                    <td><input class="regVal formatted_value" id="IRQ_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="irq_r14" class="register_row">
                                                     <td>R14<span class=smaller_font> IRQ (lr)</span></td>
-                                                    <td><input class="regVal formatted_value" id="IRQ_lr" type="text" name="r14"/></td>
+                                                    <td><input class="regVal formatted_value" id="IRQ_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="irq_r15" class="register_row">
                                                     <td>R15<span class=smaller_font> (pc)</span></td>
-                                                    <td><input class="regVal formatted_value" id="IRQ_pc" type="text" name="r15"/></td>
+                                                    <td><input class="regVal formatted_value" id="IRQ_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
                                         </div>
@@ -358,15 +358,15 @@
                                                 </tr>
                                                 <tr id="svc_r13" class="register_row">
                                                     <td>R13<span class=smaller_font> SVC (sp)</span></td>
-                                                    <td><input class="regVal formatted_value" id="SVC_sp" type="text" name="r13"/></td>
+                                                    <td><input class="regVal formatted_value" id="SVC_r13" type="text" name="r13"/></td>
                                                 </tr>
                                                 <tr id="svc_r14" class="register_row">
                                                     <td>R14<span class=smaller_font> SVC (lr)</span></td>
-                                                    <td><input class="regVal formatted_value" id="SVC_lr" type="text" name="r14"/></td>
+                                                    <td><input class="regVal formatted_value" id="SVC_r14" type="text" name="r14"/></td>
                                                 </tr>
                                                 <tr id="svc_r15" class="register_row">
                                                     <td>R15<span class=smaller_font> (pc)</span></td>
-                                                    <td><input class="regVal formatted_value" id="SVC_pc" type="text" name="r15"/></td>
+                                                    <td><input class="regVal formatted_value" id="SVC_r15" type="text" name="r15"/></td>
                                                 </tr>
                                             </table>
                                         </div>
