Added back the border in solutions

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -32,7 +32,7 @@
                 <a href="?sim=nouveau&r={{ rand }}#tabsmain-simulation"><div class="left_item"><div class="left_item_inner">Simulation libre</div></div></a>
                 <div class="left_item" id="slideout">
                     <div class="left_item_inner_top">&#10095;</div>
-                    <div class="left_item_inner">Sessions sauvegardées</div>
+                    <div id="slideout_text" class="left_item_inner">Sessions sauvegardées</div>
                     <div id="slideout_inner">
                         <div id="slide_buttons">
                             <button id="session_delete" class="delete_button">Effacer</button>
