Hide language selection until english translation is complete

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -434,13 +434,16 @@
                                             <hr/>
                                             Vitesse d'ex&eacute;cution : &nbsp;<input class="config_input" id="animate_speed" type="text" value="0"/>ms<br/>
                                             <hr/>
-                                            Langage : &nbsp;
-                                            <select id='language'>
-                                                  <option value="fr">Français</option>
-                                                  <option value="en">English</option>
-                                            </select>
-                                            <br/>
-                                            <hr/>
+                                            <!-- Language selection is temporary hidden until english translation is complete -->
+                                            <div style="display: none;> 
+                                                Langage : &nbsp;
+                                                <select id='language'>
+                                                      <option value="fr">Français</option>
+                                                      <option value="en">English</option>
+                                                </select>
+                                                <br/>
+                                                <hr/>
+                                            </div>
                                             <button id="lightmode">Modifier l'arrière-plan</button>
                                             <div style="height: 3em;"></div>
                                         </div>
